welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value vuBiscuit
  var vuBiscuit():Boolean=false
      ^Program:7: error: not found: value vuBiscuit
      vuBiscuit()=true
      ^Program:11: error: not found: value vuBiscuit
  return vuBiscuit()
         ^