welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  
  var vuBiscuit():Boolean=false
  for (nbPas<-1 to 6){
    avance()
    if (estSurBiscuit){
      vuBiscuit()=true
    }
  }
  recule(6)
  return vuBiscuit()
}